# 2023_20416955

./: .gitignore  C++.gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hi_and_date.cmd
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.cpp  adder.h  hello.cpp
Worksheet3/adder_dynamic/lib/: libadder.exp
Worksheet4/: adder.h  calc.cpp
Worksheet5/: CMakeLists.txt
Worksheet6/1stQtProject/: CMakeLists.txt  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h
Worksheet7/Exercise3/1stQtProject/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
